--- a/angular-WishList/package.json
+++ b/angular-WishList/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.11",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "bootstrap": "^4.5.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
