Implementacion de base de datos localy translate

--- a/angular-WishList/package.json
+++ b/angular-WishList/package.json
@@ -22,7 +22,10 @@
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
+    "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.5.2",
+    "dexie": "^3.0.2",
+    "dexie-export-import": "^1.0.0-rc.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
