--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/myapp/angular-whishlist
+    working_directory: ~/myapp
     docker:
-      - image: circleci/node:14-browsers
+      - image: circleci/node:8-browsers
     steps:
       - checkout:
           path: ~/myapp
