--- a/angular-WishList/package.json
+++ b/angular-WishList/package.json
@@ -24,8 +24,11 @@
         "@ngrx/store-devtools": "^10.0.0",
         "@ngx-translate/core": "^13.0.0",
         "bootstrap": "^4.5.2",
+        "core-js": "^3.6.5",
         "dexie": "^3.0.2",
         "dexie-export-import": "^1.0.0-rc.2",
+        "mapbox-gl": "^1.12.0",
+        "ngx-mapbox-gl": "^4.8.1",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
@@ -36,6 +39,7 @@
         "@angular/compiler-cli": "~9.1.11",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
+        "@types/mapbox-gl": "^1.12.3",
         "@types/node": "^12.11.1",
         "codelyzer": "^5.1.2",
         "cypress": "^5.3.0",
